# Customer-Pricing-Analytics

./: .gitignore  BayesianModel.ipynb  BayesianModelOnlyPrice.ipynb  OptimizationScripts.ipynb  README.md  eda.ipynb  pyproject.toml  requirements.txt
data/: README.md  data_dictionary_template.md
docs/: dashboard_concept.md  data_generation_explained.md  data_model.md  data_quality_rules.md  input_data_generation.md  medallion_architecture.md  methodology.md  modeling_approach.md  open_questions.md  pricing_logic.md  use_case_vision.md
docs/diagrams/: README.md  bronze_source_systems.mmd  deal_facility_pricing_lineage.mmd  field_lineage_examples.mmd  gold_model_marts.mmd  medallion_layer_flow.mmd  silver_entity_relationship.mmd
notebooks/: 00_generate_medallion_demo_data.ipynb  00_visualize_medallion_data_model.ipynb  01_data_profiling.ipynb  02_baseline_win_loss_analysis.ipynb  03_modeling_win_probability.ipynb
scripts/: generate_data_model_diagrams.py  generate_medallion_demo_data.py
src/customer_pricing_analytics/: __init__.py  config.py  data_loading.py  data_profiling.py  data_validation.py  feature_engineering.py  model_evaluation.py  model_training.py  pricing_economics.py  scoring.py
src/customer_pricing_analytics/medallion/: __init__.py  bronze_generator.py  bronze_to_silver.py  pipeline.py  quality_checks.py  (+2 more)
tests/: test_bronze_generator.py  test_bronze_to_silver.py  test_data_validation.py  test_feature_engineering.py  test_medallion_quality.py  test_mermaid_generator.py  test_pricing_economics.py  test_schema_registry.py  test_silver_to_gold.py
(+4 files in other folders)
